deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CI_PROJECT_NAME
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_PROJECT_NAME
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: $CI_PROJECT_NAME
  template:
    metadata:
      labels:
        app: $CI_PROJECT_NAME
    spec:
      containers:
        - name: $CI_PROJECT_NAME
          image: $CI_REGISTRY_IMAGE
          imagePullPolicy: Always
          resources: # resource plan
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 100Mi
          livenessProbe: # (optional) liveness health check
            tcpSocket:
              port: 80
            periodSeconds: 10
          readinessProbe: # (optional) readiness health check
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
      imagePullSecrets:
        - name: ${CI_PROJECT_NAME}-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: $CI_PROJECT_NAME
  namespace: $KUBE_NAMESPACE
spec:
  selector:
    app: $CI_PROJECT_NAME
  ports:
    - name: web
      port: 80
      targetPort: 80
#  clusterIP: 10.108.18.220
--- # service for external only
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: $CI_PROJECT_NAME
  namespace: $KUBE_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
    - host: $HOST
      http:
        paths:
          - backend:
              serviceName: $CI_PROJECT_NAME
              servicePort: 80
  tls:
    - hosts:
        - $HOST
      secretName: ${CI_PROJECT_NAME}-tls-secret
